# loki

./: Makefile  README.md
heimdall/: .gitignore  pyproject.toml
heimdall/src/heimdall/: __init__.py  __main__.py  cli.py
heimdall/src/heimdall/command/: __init__.py  args.py  parser.py
heimdall/src/heimdall/enums/: __init__.py  args.py
heimdall/src/heimdall/lib/: __init__.py
heimdall/src/heimdall/lib/factory/: args.py  json.py  template.py
heimdall/src/heimdall/lib/parser/: __init__.py  json.py  parser.py
heimdall/src/heimdall/service/json/: __init__.py  config.py  normalizer.py  schema.py
heimdall/src/heimdall/service/template/: __init__.py  config.py  generator.py
heimdall/src/heimdall/static/css/: main.css
heimdall/src/heimdall/static/css/base/: _reset.css
heimdall/src/heimdall/static/css/components/: _report.css  _table.css
heimdall/src/heimdall/templates/: gitleaks_report.html
